--- a/Front/kerux-frontend/package.json
+++ b/Front/kerux-frontend/package.json
@@ -9,6 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.1.3",
+    "electron-pos-printer": "^1.3.6",
+    "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -31,6 +35,11 @@
       "react-app/jest"
     ]
   },
+  
+    "browser": {
+        "fs": false
+    },
+  
   "browserslist": {
     "production": [
       ">0.2%",
@@ -45,5 +54,6 @@
   },
   "devDependencies": {
     "electron": "^21.2.3"
+    
   }
 }
